[refs #84441] Edit forms - fix align problem of title.

--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -531,3 +531,10 @@ body.template-country_view {
 .text-accent {
     color: @color-accent;
 }
+
+body.template-atct_edit #content {
+    text-align: initial;
+}
+body.template-atct_edit #content > div:first-of-type {
+    text-align: center;
+}
